# project/routes/utils/league_utils.js
@@ -46,9 +46,17 @@ async function addResult(match_id, result) {
 }
 
 async function addReferee(referee_id, match_id) {
-  await DButils.execQuery(
-    `UPDATE dbo.matches SET referee = '${referee_id}' WHERE match_id = '${match_id}'`
+  const permission = await DButils.execQuery(
+    `SELECT permission FROM users WHERE user_id = '${referee_id}'`
   );
+  if (permission[0]["permission"] == 2) {
+    await DButils.execQuery(
+      `UPDATE dbo.matches SET referee = '${referee_id}' WHERE match_id = '${match_id}'`
+    );
+    return "Referee updated";
+  } else {
+    return "The user is not a referee";
+  }
 }
 
 async function setPermission(user_id, permission) {
